# Ishtar

./: CMakeLists.txt  README.md  ishtar.h  isthar.h
.cache/clangd/index/: isthar.h.5F5AE97E9C55386C.idx  list_example.cpp.A925CA6C198EAD07.idx  main.cpp.CEEAA42E554FA952.idx  stack_example.cpp.D31B75C1A64EF6D2.idx
examples/: arena_alloc_example.cpp  dynamic_array_example.cpp  hashtable_example.cpp  list_example.cpp  queue_example.cpp  stack_example.cpp  string_example.cpp
src/: list_test.cpp  main.cpp
